[package]
name = "fixed-angles"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"


[dependencies]

# Other dependencies
strum = "0.26"
strum_macros = "0.26"

[dependencies.bevy]
version = "0.15.1"
features = [

  # File formats:
  "jpeg", # JPEG lossy format for 2D photos
  "webp", # WebP image format

  # Platform-specific:
  # "wayland",              # (Linux) Support Wayland windowing system
  
  # Development/Debug features:
  "dynamic_linking",   # Dynamic linking for faster compile-times
]


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
